--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -21,6 +21,10 @@
       max-width: 250px;
     }
   }
+  
+  .consultation {
+    padding: 21px 20px 50px 20px;
+  }
 }
 
 @media (max-width: 767px) {
