--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -4,4 +4,12 @@
         width: 750px;
         margin: 0 auto;
     }
+    .slick-prev {
+        
+        img {
+            width: 31px;
+            height: 50px;
+        }
+    }
 }
+
