--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -40,9 +40,12 @@
 
     &__content {
         margin-top: 60px;
-        display: flex;
+        display: none;
         justify-content: space-between;
         flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
 
     &-item {
@@ -80,6 +83,7 @@
             font-weight: 500;
             text-align: center;
             text-decoration: underline;
+            text-transform: uppercase;
             &:hover {
                 color: $main-color;
             }
@@ -150,6 +154,21 @@
                     left: -14px;
                     top: 7px;
                 }
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color: $main-color;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: uppercase;
+            &:hover {
+                color: $main-color;
             }
         }
     }
