--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -55,6 +55,16 @@
 		}
 		
 	}
+	.footer {
+		&__info {
+			padding-top: 20px;
+			width: 420px;
+			height: 200px;
+		}
+		&__addr {
+			font-size: 18px;
+		}
+	}
 }
 
 @media (max-width: 767px) {
@@ -292,6 +302,52 @@
 		&__text {
 			font-size: 12px;
 			text-align: center;
+		}
+	}
+	.footer {
+		&__info {
+			width: 320px;
+			height: 160px;
+			padding: 30px 10px 60px 10px;
+		}
+		&__addr {
+			font-size: 16px;
+			line-height: normal;
+			margin-bottom: 15px;
+		}
+		&__phone {
+			margin-bottom: 15px;
+		}
+		&__social-item {
+			margin: 0 5px;
+			width: 30px;
+			height: 30px;
+			img {
+				height: 15px;
+			}
+		}
+
+	}
+
+	.modal {
+		position: absolute;
+		width: 300px;
+		min-height: 300px;
+		padding: 20px 10px 20px 10px;
+		&__close {
+			position: relative;
+			top: -50px;
+			right: -46%
+
+		}
+		&__subtitle {
+			font-size: 16px;
+		}
+		&__descr {
+			font-size: 12px;
+		}
+		.feed-form {
+			width: 280px;
 		}
 	}
 }
