--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,4 +1,5 @@
 .button {
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     width: 150px;
     height: 30px;
     border-radius: 5px;
@@ -12,12 +13,14 @@
     line-height: normal;
     text-align: center;
     text-transform: uppercase;
+    &:hover {
+        box-shadow: 5px 5px 20px $main-color;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
         height: 50px;
         font-size: 16px;
-
     }
     &_submit {
         width: 100%;
