--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -15,7 +15,41 @@
         margin-bottom: 36px;
         color: #ffffff;
         font-size: 20px;
+        line-height: 20px;
         font-weight: 500;
         text-align: center;
+    }
+    &__phone {
+        display: block;
+        color: #ffffff;
+        font-size: 20px;
+        line-height: 20px;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 38px;
+        &:hover {
+            color: #fff
+        }
+    }
+    &__social-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        border: 2px solid #ffffff;
+        border-radius: 100%;
+        margin: 0 15px;
+        &:hover {
+            transform: scale(1.1);
+        }
+        img {
+            height: 27px;
+        }
+    }
+    &__social {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
